@@ -146,6 +146,11 @@
 
 2014-04-11  Sanimir Agovic  <sanimir.agovic@intel.com>
 
+	* findvar.c (default_read_var_value): Resolve dynamic bounds if location
+	points to a constant blob.
+
+2014-04-11  Sanimir Agovic  <sanimir.agovic@intel.com>
+
 	* dwarf2read.c (read_subrange_type): Convert DW_AT_count to a dynamic
 	property and store it as the high bound and flag the range accordingly.
 	* gdbtypes.c (resolve_dynamic_bounds): If range is flagged as
